# News_Aggregator

./: .gitignore  CMakeLists.txt  HTML_CLIENT_GUIDE.md  README.md  docker-compose.yml  test_api.py  test_client.html
configs/: collector_config.yaml  env.yaml  gateway_config.yaml  static_config.yaml
scripts/: build.sh  format-json.sh  quick-start.sh  serve-html.sh  start-dev.sh  status.sh  stop-dev.sh  test-api.sh
sql/: 001_create_news_table.sql
src/collector/: collector_service.cpp  collector_service.hpp  http_client.cpp  http_client.hpp  main.cpp  rss_parser.cpp  rss_parser.hpp
src/gateway/: http_client.cpp  http_client.hpp  main.cpp  redis_client.cpp  redis_client.hpp
src/handlers/: collector_status_handler.cpp  collector_status_handler.hpp  health_handler.cpp  health_handler.hpp  news_add_handler.cpp  news_add_handler.hpp  news_handler.cpp  news_handler.hpp  news_latest_handler.cpp  news_latest_handler.hpp
src/storage/: main.cpp  postgres_client.cpp  postgres_client.hpp
